fix reset password link

--- a/templates/changepass.html
+++ b/templates/changepass.html
@@ -6,7 +6,7 @@
     <title></title>
 </head>
 <body>
-    <form action="/user/setting/resetpass/{{link}}" method="POST">
+    <form action="/user/setting/resetpass/" method="POST">
         <input type="password" name="newpass" placeholder="New Password" required>
         <input type="password" name="confpass" placeholder="Confirm Password" required>
     <button type="submit">Change</button>
