--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Welecme to Silicon Valley" />
-  <meta property="og:description" content="" />
-  <meta property="og:image" content="{{ url_for('static',filename = 'img/home-bg.jpg')}}" />
+  <meta property="og:image" content="static/img/home-bg.jpg" />
   <meta name="author" content="">
 
   <title>{%block title %}{%endblock%}</title>
